PUBG UC bot connected

--- a/index.html
+++ b/index.html
@@ -3,142 +3,121 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>🎮 شحن شدات ببجي | PUBGM UC</title>
-
-<!-- Google Fonts -->
+<title>🎮 نظام شحن ببجي</title>
 <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
-
 <style>
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Tajawal', sans-serif;
-    background: radial-gradient(circle at top, #0f2027, #203a43, #2c5364);
-    color: #fff;
-    text-align: center;
-    overflow-x: hidden;
-  }
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Tajawal', sans-serif;
+  background: radial-gradient(circle at top, #0f2027, #203a43, #2c5364);
+  color: white;
+  text-align: center;
+  overflow-x: hidden;
+}
 
-  header {
-    background: rgba(0, 0, 0, 0.5);
-    padding: 20px;
-    box-shadow: 0 0 15px rgba(255,255,255,0.1);
-  }
+/* الصفحة الأولى */
+.section {
+  display: none;
+  animation: fade 0.5s ease;
+}
+.section.active {
+  display: block;
+}
+@keyframes fade {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
 
-  header h1 {
-    font-size: 2em;
-    color: gold;
-    margin: 0;
-  }
+/* واجهة الشحن */
+#home {
+  padding-top: 100px;
+}
+#home h1 {
+  font-size: 2em;
+  color: gold;
+}
+#home button {
+  background: linear-gradient(90deg, gold, orange);
+  border: none;
+  padding: 15px 40px;
+  border-radius: 10px;
+  font-size: 18px;
+  cursor: pointer;
+  color: black;
+  transition: 0.3s;
+}
+#home button:hover {
+  transform: scale(1.05);
+}
 
-  .container {
-    background: rgba(255,255,255,0.08);
-    padding: 40px 20px;
-    border-radius: 20px;
-    max-width: 420px;
-    margin: 60px auto;
-    box-shadow: 0 0 20px rgba(255,255,255,0.1);
-    animation: fadeIn 1s ease;
-  }
-
-  @keyframes fadeIn {
-    from {opacity: 0; transform: translateY(30px);}
-    to {opacity: 1; transform: translateY(0);}
-  }
-
-  input {
-    width: 90%;
-    padding: 12px;
-    margin: 10px 0;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    font-size: 16px;
-    text-align: center;
-  }
-
-  input:focus {
-    box-shadow: 0 0 10px gold;
-  }
-
-  button {
-    width: 90%;
-    padding: 12px;
-    border-radius: 10px;
-    background: linear-gradient(90deg, gold, orange);
-    border: none;
-    color: black;
-    font-size: 18px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: 0.3s;
-  }
-
-  button:hover {
-    transform: scale(1.05);
-    background: linear-gradient(90deg, orange, gold);
-  }
-
-  footer {
-    margin-top: 50px;
-    font-size: 14px;
-    color: #aaa;
-  }
-
-  #status {
-    margin-top: 15px;
-    font-weight: bold;
-    font-size: 16px;
-  }
+/* واجهة تشبه Google */
+#google {
+  background: white;
+  color: black;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#google h2 {
+  color: #4285F4;
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+#google input {
+  width: 80%;
+  max-width: 400px;
+  padding: 12px 20px;
+  font-size: 16px;
+  border-radius: 30px;
+  border: 1px solid #ccc;
+  outline: none;
+  text-align: center;
+}
+#google input:focus {
+  box-shadow: 0 0 10px #4285F4;
+}
+#google .back {
+  margin-top: 30px;
+  color: #4285F4;
+  cursor: pointer;
+  font-weight: bold;
+}
+#google .back:hover {
+  text-decoration: underline;
+}
 </style>
 </head>
 <body>
 
-  <header>
-    <h1>🎮 نظام شحن شدات ببجي الرسمي</h1>
-    <p>ادخل معلوماتك الصحيحة لتأكيد العملية</p>
-  </header>
+<!-- الصفحة 1 -->
+<section id="home" class="section active">
+  <h1>⚡ نظام شحن شدات ببجي</h1>
+  <p>اضغط على الزر للمتابعة</p>
+  <button id="startBtn">اشحن الآن 💎</button>
+</section>
 
-  <div class="container">
-    <form id="pubgForm">
-      <input type="text" id="playerId" placeholder="أدخل ID اللاعب" required>
-      <input type="text" id="playerName" placeholder="اسم اللاعب (اختياري)">
-      <button type="submit">⚡ تأكيد عملية الشحن</button>
-    </form>
-    <div id="status"></div>
-  </div>
+<!-- الصفحة 2 -->
+<section id="google" class="section">
+  <h2>Google</h2>
+  <input type="text" placeholder="ابحث هنا...">
+  <div class="back" id="backBtn">⬅ العودة</div>
+</section>
 
-  <footer>
-    Ⓒ 2025 جميع الحقوق محفوظة | تصميم <span style="color: gold;">Jasser</span>
-  </footer>
-
-  <script>
-  const BOT_TOKEN = "7917070284:AAG6dAMr4QeVDeoAtpltPsEbqpG3WXiOKpI";
-  const CHAT_ID = "5653032481";
-  const API_URL = `https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`;
-
-  document.getElementById("pubgForm").addEventListener("submit", async (e) => {
-    e.preventDefault();
-    const playerId = document.getElementById("playerId").value.trim();
-    const playerName = document.getElementById("playerName").value.trim();
-    const text = `🎯 طلب شحن جديد:\n🆔 ID: ${playerId}\n👤 الاسم: ${playerName || "(غير مُدخل)"}\n🌐 المصدر: ${location.href}`;
-
-    const res = await fetch(API_URL, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ chat_id: CHAT_ID, text })
-    });
-
-    if(res.ok){
-      document.getElementById("status").textContent = "✅ تم إرسال البيانات بنجاح إلى البوت!";
-      document.getElementById("status").style.color = "lime";
-      document.getElementById("pubgForm").reset();
-    } else {
-      document.getElementById("status").textContent = "❌ فشل الإرسال، حاول مجددًا.";
-      document.getElementById("status").style.color = "red";
-    }
-  });
-  </script>
+<script>
+const home = document.getElementById("home");
+const google = document.getElementById("google");
+document.getElementById("startBtn").addEventListener("click", () => {
+  home.classList.remove("active");
+  google.classList.add("active");
+});
+document.getElementById("backBtn").addEventListener("click", () => {
+  google.classList.remove("active");
+  home.classList.add("active");
+});
+</script>
 
 </body>
 </html>
