--- a/index.html
+++ b/index.html
@@ -85,9 +85,92 @@
     .right { position:relative; top:0 }
     .logo{width:56px;height:56px}
   }
+
+  /* === Splash styles (keep with your dark/golden theme) === */
+  #splashOverlay {
+    position: fixed;
+    inset: 0;
+    z-index: 99999;
+    background: linear-gradient(180deg, rgba(4,6,10,0.98), rgba(2,4,6,0.98));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    backdrop-filter: blur(3px);
+    transition: opacity .45s ease, visibility .45s;
+    visibility: visible;
+    opacity: 1;
+  }
+
+  #splashOverlay.hidden { opacity: 0; visibility: hidden; pointer-events: none; }
+
+  .splash-center {
+    width: min(520px, 92%);
+    text-align: center;
+    padding: 28px;
+    border-radius: 14px;
+    background: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.02));
+    border: 1px solid rgba(255,255,255,0.04);
+    box-shadow: 0 18px 50px rgba(0,0,0,0.6);
+  }
+
+  .splash-logo {
+    width:84px; height:84px; border-radius:14px;
+    margin: 0 auto 12px;
+    display:flex; align-items:center; justify-content:center;
+    background: linear-gradient(90deg,#f0c75e,#d9a441);
+    color:#071018; font-weight:900; font-size:28px;
+    box-shadow: 0 10px 30px rgba(217,164,65,0.08);
+    transform-origin:center;
+    animation: splashPulse 2.8s infinite;
+  }
+  @keyframes splashPulse { 0%{transform:scale(1)}50%{transform:scale(1.04)}100%{transform:scale(1)} }
+
+  .splash-title { margin:6px 0 4px; font-size:22px; font-weight:800; color:#fff; letter-spacing:0.6px; }
+  .splash-sub { margin:0 0 18px; color: #cfe6d9; font-size:14px; }
+
+  .splash-progress-wrap {
+    height:12px; background: rgba(255,255,255,0.04); border-radius:12px; overflow:hidden; margin: 10px 12px 8px;
+  }
+  .splash-progress-bar {
+    height:100%; width:0%; background: linear-gradient(90deg,#f0c75e,#d9a441); transition: width .2s linear;
+  }
+
+  .splash-small { margin-top:8px; color:var(--muted); font-size:13px; }
+
+  .splash-skip {
+    margin-top:14px;
+    border: 0;
+    background: transparent;
+    color: #ffd985;
+    font-weight:700;
+    cursor:pointer;
+    padding:8px 12px;
+    border-radius:10px;
+    transition: transform .12s;
+  }
+  .splash-skip:hover { transform: translateY(-2px); }
+
 </style>
 </head>
 <body>
+
+  <!-- ===== Splash / Intro Overlay ===== -->
+  <div id="splashOverlay" aria-hidden="true">
+    <div class="splash-center">
+      <div class="splash-logo">UC</div>
+      <h2 class="splash-title">Farmliya</h2>
+      <p class="splash-sub">أهلاً بك — جاري تجهيز الواجهة، انتظر لحظة...</p>
+
+      <div class="splash-progress-wrap">
+        <div id="splashProgress" class="splash-progress-bar"></div>
+      </div>
+
+      <div class="splash-small">سيبدأ الموقع بعد <span id="splashSeconds">5</span> ثوانٍ</div>
+      <button id="skipSplash" class="splash-skip">تخطي</button>
+    </div>
+  </div>
+  <!-- ===== end Splash ===== -->
+
   <div class="bg"></div>
   <div class="overlay"></div>
 
@@ -375,6 +458,47 @@ clearBtn.addEventListener('click', ()=>{ form.reset(); showPreview(); statusEl.t
 
 // initial preview
 showPreview();
+</script>
+
+<!-- Splash control script -->
+<script>
+(function(){
+  const overlay = document.getElementById('splashOverlay');
+  const prog = document.getElementById('splashProgress');
+  const secSpan = document.getElementById('splashSeconds');
+  const skipBtn = document.getElementById('skipSplash');
+
+  // مدة العرض بالثواني
+  const DURATION = 5;
+  let intervalId = null;
+  let start = null;
+
+  function startSplash() {
+    start = performance.now();
+    if(intervalId) clearInterval(intervalId);
+    intervalId = setInterval(() => {
+      const elapsed = (performance.now() - start) / 1000; // seconds
+      const pct = Math.min(100, (elapsed / DURATION) * 100);
+      prog.style.width = pct + '%';
+      const left = Math.max(0, Math.ceil(DURATION - elapsed));
+      secSpan.textContent = left;
+      if(elapsed >= DURATION) finishSplash();
+    }, 80);
+  }
+
+  function finishSplash() {
+    if(intervalId) { clearInterval(intervalId); intervalId = null; }
+    overlay.classList.add('hidden');
+    setTimeout(()=> { try{ overlay.remove(); }catch(e){} }, 600);
+  }
+
+  skipBtn.addEventListener('click', finishSplash);
+
+  window.addEventListener('load', () => {
+    // بداية متأخرة قليلًا كي يتحضر الخلفيّة
+    setTimeout(startSplash, 120);
+  });
+})();
 </script>
 
 </body>
